[package]
name = "odbc-avro"
version = "0.1.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"

[dependencies]
avro-rs = "0.6.5"
odbc-iter = { version = "0.1.0", features = ["serde_json"] }
lazy_static = "1.3.0"
regex = "1.2.0"
serde_json = "1.0.40"

[dev-dependencies]
problem = "5.1.0"
assert_matches = "1.3.0"
