[package]
name = "odbc-avro"
version = "0.2.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Extends odbc-iter crate functionality with ability to query Avro records and write entire ResultSet as Avro Object Container File data."
repository = "https://github.com/jpastuszek/odbc-avro"
documentation = "https://docs.rs/odbc-avro"
readme = "README.md"
keywords = ["odbc", "orm", "database", "avro"]
categories = ["database"]
license = "MIT"
edition = "2018"

[features]
decimal = ["odbc-iter/rust_decimal", "rust_decimal"]

[dependencies]
avro-rs = "0.6.5"
odbc-iter = { version = "0.2.4", features = ["serde_json"] }
rust_decimal = { version = "1.1.0", optional = true }
lazy_static = "1.3.0"
regex = "1.2.0"
serde_json = "1.0.40"
chrono = "0.4.7"
ensure = "0.2.0"

[dev-dependencies]
problem = "5.1.0"
assert_matches = "1.3.0"
